--- a/Nexus/index.html
+++ b/Nexus/index.html
@@ -9,23 +9,24 @@
 <body>
   <main class="focus-container">
     <h1 class="app-title">Nexus</h1>
-    <h2 class="sub-title">Lets allow a bit of focus in your life</h2>
+    <h2 class="sub-title">Lets unlock a bit of focus</h2>
     <div class="quote" id="quote"></div>
     <div class="task-section">
       <input type="text" id="taskInput" placeholder="What are you focusing on?" maxlength="60" />
     </div>
-    <div class="timer" id="timer">25:00</div>
+    <div class="timer" id="timer">00:00</div>
     <label for="sessionLength" class="session-label">Session Length:</label>
     <select id="sessionLength">
       <option value="5">5 min</option>
       <option value="15">15 min</option>
+      <option value="30">30 min</option>
       <option value="25" selected>25 min</option>
       <option value="50">50 min</option>
     </select>
-    <label for="customSessionLength" class="session-label">Or enter custom (min):</label>
+    <label for="customSessionLength" class="session-label">Enter custom amount here</label>
     <input type="number" id="customSessionLength" min="1" max="180" placeholder="e.g. 42" style="margin-bottom:0.5em;" />
     <button id="startBtn">Start Focus</button>
   </main>
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
